# apple-review-analyzer

./: .gitignore  DEPLOY.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  collector.py  config.py  main.py  metrics.py  models.py  processing.py  service.py  storage.py  translation.py
backend/app/insights/: __init__.py  derived.py  graph.py  llm.py  local.py
backend/app/insights/prompts/: classify_fewshot.json
backend/evals/: distillation_report.md
backend/scripts/: distill_prompts.py  dump_reviews.py
backend/tests/: test_api.py  test_collector.py  test_insights_graph.py  test_insights_llm.py  test_insights_local.py  test_metrics.py  test_processing.py  test_translation.py
deploy/: nginx.conf
docs/: api-reference.md  data-collection.md  demo-script-ua.md
docs/diagrams/: generate.py
docs/plans/: 2026-06-28-build-plan.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/public/: compare.json
frontend/src/: App.jsx  App.tsx  AppSearch.jsx  ArchDiagram.jsx  Loading.jsx  LoadingScene.jsx  Particles.jsx  PipelineDiagram.jsx  api.js  api.ts  data.js  highlight.jsx  index.css  popularApps.js  style.css  ui.jsx
frontend/src/components/: Layout.tsx  TokenGate.tsx
frontend/src/pages/: Home.tsx  Results.tsx
samples/: 1459969523_europe.json
scripts/: gen_popular_apps.py
